refactor: remove unnessary protocol-connect params
